GitHub Pages + workflow

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,10 +9,10 @@
         <!-- Brand -->
         <a class="navbar-brand fw-bold" href="/">UniStudy</a>
 
-        <!-- Menu
+        <!-- Menu-->
         <div class="navbar-nav me-auto">
             <a class="nav-link" href="/list">Lista</a>
-        </div>-->
+        </div>
 
         <!-- Telegram link -->
         <div class="navbar-nav">
