--- a/views/crea.ejs
+++ b/views/crea.ejs
@@ -10,6 +10,7 @@
     <!-- Navbar CSS - DOPO Bootstrap per sovrascrivere -->
     <link rel="stylesheet" href="/styles/crea.css">
     <link rel="stylesheet" href="/styles/navbar.css">
+    <link rel="icon" type="image/png" href="/public/media/favicon.png">
 </head>
 
 <%- include('partials/navbar') %>
