--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/navbar.css">
    
-
+    <link rel="icon" type="image/png" href="/public/media/favicon.png">
 </head>
+
 <body>
 <!-- Include navbar se necessaria -->
 <%- include('partials/navbar') %>
