--- a/views/list.ejs
+++ b/views/list.ejs
@@ -14,6 +14,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/styles/navbar.css">
     <link rel="stylesheet" href="/styles/list.css">
+    <link rel="icon" type="image/png" href="/public/media/favicon.png">
 </head>
 
 <body>
